# HTTPhilip-C

./: CMakeLists.txt  events.db  readme.MD
include/: database.h  html_server.h  request_handler.h  request_parser.h  request_router.h  server.h  socket_handler.h
public/: create.html  index.html  style.css
src/: database.c  html_server.c  main.c  request_handler.c  request_parser.c  request_router.c  route_functions.c  server.c  socket_handler.c
